--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <button type="submit">Hae</button>
                 </form>
                 <br>
-                <a class="source" href="https://github.com/blomma-dev/WeatherWebApp">WeatherWebApp on GitHub</a>
+                <a class="source" href="https://github.com/blomma-dev/weather-services" target="_blank">Weather Web App on GitHub</a>
                 </div>
             </div>
         </div>
