updated title on header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-fluid justify-content-center">
                 <ul class="navbar-nav mb-2 mb-lg-0 justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Weather Web App!</a>
+                    <a class="nav-link active" aria-current="page" href="#">Weather Web App</a>
                 </li>
                 </ul>
             </div>
